# py4godot

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .sconsign.dblite  Array_template  LICENSE  README.md  SConstruct  add_distutils_comment.py  aliases.py  build.gradle  build.py  build_tools.py  build_wrapper.py  cache_hit_cythonize.py  cmd_test.py  config.json  config.py  copy_distutils.py  copy_files.py  create_plugin.py  cythonize_files.py  cythonize_test.py  dev_cythonize_files.py  evaluate_xml.py  example.py  generate.py  generate_bindings.py  generate_bindings_pyi.py  generate_c_bindings.py  generate_classes.py  generate_classes_cpp.py  generate_classes_hpp.py  generate_classes_pxd.py  generate_classes_pyi.py  generate_common_functions.py  generate_common_functions_pyi.py  generate_core_files.py  (+19 more)
.github/env/: Dockerfile
.github/workflows/: android_release.yml  complete_release.yml  linux_release.yml  macos_release.yml  monthly-linux.yml  nightly-linux.yml  nightly-linuxarm.yml  nightly-macos.yml  nightly-windows.disabled  nightly-windows.yml  python-app.yml  test_windows.yml  weekly-linux.disabled  weekly-macos.yml  weekly-windows.yml  windows_release.yml  windowsarm64.yml
build_resources/: export_py4godot.gd  export_py4godot_main.gd  gdextension_android_template.gdextension  gdextension_template.gdextension  install_dependencies.py  install_pip.py  plugin.cfg  python.gdextension  signal_script.py
build_resources/plugin_tools/: README.md
classes/: ARVRAnchor.c  ARVRAnchor.pxd  ARVRAnchor.pyx  ARVRCamera.c  ARVRCamera.pxd  ARVRCamera.pyx  ARVRController.c  ARVRController.pxd  ARVRController.pyx  ARVRInterface.c  ARVRInterface.pxd  ARVRInterface.pyx  ARVRInterfaceGDNative.c  ARVRInterfaceGDNative.pxd  ARVRInterfaceGDNative.pyx  ARVROrigin.c  ARVROrigin.pxd  ARVROrigin.pyx  ARVRPositionalTracker.c  ARVRPositionalTracker.pxd  ARVRPositionalTracker.pyx  ARVRServer.c  ARVRServer.pxd  ARVRServer.pyx  AStar.c  AStar.pxd  AStar.pyx  AStar2D.c  AStar2D.pxd  AStar2D.pyx  AcceptDialog.c  AcceptDialog.pxd  AcceptDialog.pyx  AnimatedSprite.c  AnimatedSprite.pxd  AnimatedSprite.pyx  AnimatedSprite3D.c  AnimatedSprite3D.pxd  AnimatedSprite3D.pyx  AnimatedTexture.pxd  (+1788 more)
core/: __init__.py
core/aabb/: AABB.c  AABB.pxd  AABB.pyx  aabb_binding.pxd
core/array/: Array.c  Array.pxd  Array.pyx  Array_api.h  array_binding.pxd
core/basis/: Basis.c  Basis.pxd  Basis.pyx  basis_binding.pxd
core/camera_matrix/: CameraMatrix.c  camera_matrix_binding.pxd
core/color/: Color.c  Color.pxd  Color.pyx  color_binding.pxd
core/dictionary/: Dictionary.c  Dictionary.pxd  Dictionary.pyx  Dictionary_api.h  dictionary_binding.pxd
core/node_path/: NodePath.c  NodePath.pxd  NodePath.pyx  node_path_binding.pxd
core/plane/: Plane.c  Plane.pxd  Plane.pyx  plane_binding.pxd
core/pool_array/: PoolArrays.c  PoolArrays.pxd  PoolArrays.pyx  pool_array_binding.pxd
core/quat/: Quat.c  Quat.pxd  Quat.pyx  quat_binding.pxd
core/rect2/: Rect2.c  Rect2.pxd  Rect2.pyx  rect2_binding.pxd
core/rid/: RID.c  RID.pxd  RID.pyx  rid_binding.pxd
core/string/: String.c  String.pxd  String.pyx  String_api.h  string_binding.pxd
core/string_name/: StringName.pxd  StringName.pyx  string_name_binding.pxd
core/transform/: Transform.c  Transform.pxd  Transform.pyx  Transform2D.c  Transform2D.pxd  Transform2D.pyx  Transform2d.pxd  Transform2d.pyx  transform_binding.pxd
core/variant/: Variant.c  Variant.pxd  Variant.pyx  Variant_api.h  variant_binding.pxd
core/vector2/: Vector2.c  Vector2.pxd  Vector2.pyx  vector2_binding.pxd
core/vector3/: Vector3.c  Vector3.pxd  Vector3.pyx  vector3_binding.pxd
dockerbuild/: linux  linux32  windows  windows32
enums/: enums.c  enums.pyx
gdnative_api/: api.pyx
generation_files/: generate_call_static_methods.py  generate_cast_helpers.py  generate_cast_helpers_dev.py  generate_cast_helpers_release.py  generate_class_ids.py  generate_classes.py  generate_classes_cpp.py  generate_classes_hpp.py  generate_classes_pxd.py  generate_classes_pyi.py  generate_common_functions.py  generate_common_functions_pyi.py  generate_constant_core_classes.py  generate_constants.py  generate_enums.py  generate_enums_cpp.py  generate_method_call_PyLanguage.py  generate_method_ids.py  generate_native_structs.py  generate_print_error_detailed.py  generate_pxd_bridge.py  generate_pxd_utility.py  generate_py_classes.py  generate_singletons_instantiation.py  generate_type_checking.py  generate_utility_hpp.py  generate_utils_cpp.py  generate_wrappers.py  generation_tools.py  xml_help.py
generation_files/utils/: constant_generation_helpers.py
godot_api/: binding.h  binding.pxd  binding_backup.pxd  binding_external.pxd  delorean.c  delorean.h  delorean.pyx  delorean_api.h  main.h  python_godot_apis.c  python_godot_apis.pyx  python_godot_apis_api.h
godot_bindings/: binding.h  binding.pxd  binding_external.pxd  main.c  main.h  main.pyx  types.pxd
meson_scripts/: build_cache_checker.py  collect_all_classes.py  copy_tools.py  create_cache.py  does_cache_exist.py  download_godot.py  download_python.py  fix_path_macos.py  generate_cast_helpers.py  generate_constants.py  generate_godot.py  generate_init_files.py  get_dependencies_for_classes.py  glob_tools.py  glob_tools_cpp.py  locations.py  platform_check.py  print_tools.py  python_loc.py  reset_times.py  variables.py
meson_scripts/cythonize_files/: cache_hit_cythonize.py  cythonize_files.py  cythonize_one_file.py  dev_cythonize_files.py
pluginscript_api/: api.c  api.pyx  api_api.h
pluginscript_api/description_classes/: MethodDescription.c  MethodDescription.pyx  PropertyDescription.c  (+1 more)
py4godot/: constants.pxd  constants.pyi  constants.pyx  methods.py  properties.py  signals.pxd  signals.py  signals.pyi  signals.pyx  singletons.py  test_bridge.pyx  variant_types.py
py4godot_core_holder/: core_holder.pxd  core_holder.pyx
tests/: PythonTest.py  TestRunner.py  python_lib.gdnlib
tools/: generate_methods.py
utils/: GDClassWrapper.pxd  GDClassWrapper.pyx  Wrapper.c  Wrapper.pxd  Wrapper.pyx
(+565 files in other folders)
